--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ export/
 assets/preload/data/milf/modchart.lua
 assets/songs/bloodshed/Inst.ogg.sfk
 assets/preload/videos/ron.mp4.sfk
+assets/shared/images/updateron/bg/Funny.mdp
