--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ assets/preload/data/milf/modchart.lua
 assets/songs/bloodshed/Inst.ogg.sfk
 assets/preload/videos/ron.mp4.sfk
 assets/shared/images/updateron/bg/Funny.mdp
+art/flashFiles/RECOVER_newnotes.fla
+art/flashFiles/newnotes.fla
