--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ assets/preload/videos/ron.mp4.sfk
 assets/shared/images/updateron/bg/Funny.mdp
 art/flashFiles/RECOVER_newnotes.fla
 art/flashFiles/newnotes.fla
+source/GJKeys.hx
